// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Appointment details should hide comment section when there is no comment to display 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AppointmentDetails
    appointmentTypeDescription="ACT"
    comments=""
    endTime=""
    locationDescription="GYM"
    recurring={false}
    repeats=""
    startTime="2019-10-10T:21:0:00Z"
    times=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Styled(div)>
          <strong>
            Appointment type
          </strong>
          <Styled(div)>
            ACT
          </Styled(div)>
        </Styled(div)>,
        <Styled(div)>
          <strong>
            Appointment location
          </strong>
          <Styled(div)>
            GYM
          </Styled(div)>
        </Styled(div)>,
        <Styled(div)>
          <strong>
            Date and time 
          </strong>
          <Styled(div)>
            <div>
              Thursday
            </div>
            10/10/2019 - 21:00
             
            
          </Styled(div)>
        </Styled(div)>,
        "",
        false,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <strong>
              Appointment type
            </strong>,
            <Styled(div)>
              ACT
            </Styled(div)>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Appointment type",
            },
            "ref": null,
            "rendered": "Appointment type",
            "type": "strong",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "ACT",
            },
            "ref": null,
            "rendered": "ACT",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <strong>
              Appointment location
            </strong>,
            <Styled(div)>
              GYM
            </Styled(div)>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Appointment location",
            },
            "ref": null,
            "rendered": "Appointment location",
            "type": "strong",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "GYM",
            },
            "ref": null,
            "rendered": "GYM",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <strong>
              Date and time 
            </strong>,
            <Styled(div)>
              <div>
                Thursday
              </div>
              10/10/2019 - 21:00
               
              
            </Styled(div)>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Date and time ",
            },
            "ref": null,
            "rendered": "Date and time ",
            "type": "strong",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <div>
                  Thursday
                </div>,
                "10/10/2019 - 21:00",
                " ",
                "",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Thursday",
                },
                "ref": null,
                "rendered": "Thursday",
                "type": "div",
              },
              "10/10/2019 - 21:00",
              " ",
              "",
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "",
      false,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(div)>
            <strong>
              Appointment type
            </strong>
            <Styled(div)>
              ACT
            </Styled(div)>
          </Styled(div)>,
          <Styled(div)>
            <strong>
              Appointment location
            </strong>
            <Styled(div)>
              GYM
            </Styled(div)>
          </Styled(div)>,
          <Styled(div)>
            <strong>
              Date and time 
            </strong>
            <Styled(div)>
              <div>
                Thursday
              </div>
              10/10/2019 - 21:00
               
              
            </Styled(div)>
          </Styled(div)>,
          "",
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <strong>
                Appointment type
              </strong>,
              <Styled(div)>
                ACT
              </Styled(div)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Appointment type",
              },
              "ref": null,
              "rendered": "Appointment type",
              "type": "strong",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "ACT",
              },
              "ref": null,
              "rendered": "ACT",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <strong>
                Appointment location
              </strong>,
              <Styled(div)>
                GYM
              </Styled(div)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Appointment location",
              },
              "ref": null,
              "rendered": "Appointment location",
              "type": "strong",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "GYM",
              },
              "ref": null,
              "rendered": "GYM",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <strong>
                Date and time 
              </strong>,
              <Styled(div)>
                <div>
                  Thursday
                </div>
                10/10/2019 - 21:00
                 
                
              </Styled(div)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Date and time ",
              },
              "ref": null,
              "rendered": "Date and time ",
              "type": "strong",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <div>
                    Thursday
                  </div>,
                  "10/10/2019 - 21:00",
                  " ",
                  "",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Thursday",
                  },
                  "ref": null,
                  "rendered": "Thursday",
                  "type": "div",
                },
                "10/10/2019 - 21:00",
                " ",
                "",
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "",
        false,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Appointment details should render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AppointmentDetails
    appointmentTypeDescription="ACT"
    comments="test"
    endTime=""
    locationDescription="GYM"
    recurring={true}
    repeats="DAILY"
    startTime="2019-03-20T:21:0:00Z"
    times="5"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Styled(div)>
          <strong>
            Appointment type
          </strong>
          <Styled(div)>
            ACT
          </Styled(div)>
        </Styled(div)>,
        <Styled(div)>
          <strong>
            Appointment location
          </strong>
          <Styled(div)>
            GYM
          </Styled(div)>
        </Styled(div)>,
        <Styled(div)>
          <strong>
            Date and time 
          </strong>
          <Styled(div)>
            <div>
              Wednesday
            </div>
            20/03/2019 - 21:00
             
            
          </Styled(div)>
        </Styled(div)>,
        <Styled(div)>
          <strong>
            Comments
          </strong>
          <Styled(div)>
            test
          </Styled(div)>
        </Styled(div)>,
        <Styled(div)>
          <strong>
            Recurring
          </strong>
          <Styled(div)>
            Daily
            , 
            5
             occurrences
          </Styled(div)>
          <Styled(div)>
            Ends 
            Sunday, March 24th 2019
          </Styled(div)>
        </Styled(div)>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <strong>
              Appointment type
            </strong>,
            <Styled(div)>
              ACT
            </Styled(div)>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Appointment type",
            },
            "ref": null,
            "rendered": "Appointment type",
            "type": "strong",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "ACT",
            },
            "ref": null,
            "rendered": "ACT",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <strong>
              Appointment location
            </strong>,
            <Styled(div)>
              GYM
            </Styled(div)>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Appointment location",
            },
            "ref": null,
            "rendered": "Appointment location",
            "type": "strong",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "GYM",
            },
            "ref": null,
            "rendered": "GYM",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <strong>
              Date and time 
            </strong>,
            <Styled(div)>
              <div>
                Wednesday
              </div>
              20/03/2019 - 21:00
               
              
            </Styled(div)>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Date and time ",
            },
            "ref": null,
            "rendered": "Date and time ",
            "type": "strong",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <div>
                  Wednesday
                </div>,
                "20/03/2019 - 21:00",
                " ",
                "",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Wednesday",
                },
                "ref": null,
                "rendered": "Wednesday",
                "type": "div",
              },
              "20/03/2019 - 21:00",
              " ",
              "",
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <strong>
              Comments
            </strong>,
            <Styled(div)>
              test
            </Styled(div)>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Comments",
            },
            "ref": null,
            "rendered": "Comments",
            "type": "strong",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "test",
            },
            "ref": null,
            "rendered": "test",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <strong>
              Recurring
            </strong>,
            <Styled(div)>
              Daily
              , 
              5
               occurrences
            </Styled(div)>,
            <Styled(div)>
              Ends 
              Sunday, March 24th 2019
            </Styled(div)>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Recurring",
            },
            "ref": null,
            "rendered": "Recurring",
            "type": "strong",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "Daily",
                ", ",
                "5",
                " occurrences",
              ],
            },
            "ref": null,
            "rendered": Array [
              "Daily",
              ", ",
              "5",
              " occurrences",
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "Ends ",
                "Sunday, March 24th 2019",
              ],
            },
            "ref": null,
            "rendered": Array [
              "Ends ",
              "Sunday, March 24th 2019",
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(div)>
            <strong>
              Appointment type
            </strong>
            <Styled(div)>
              ACT
            </Styled(div)>
          </Styled(div)>,
          <Styled(div)>
            <strong>
              Appointment location
            </strong>
            <Styled(div)>
              GYM
            </Styled(div)>
          </Styled(div)>,
          <Styled(div)>
            <strong>
              Date and time 
            </strong>
            <Styled(div)>
              <div>
                Wednesday
              </div>
              20/03/2019 - 21:00
               
              
            </Styled(div)>
          </Styled(div)>,
          <Styled(div)>
            <strong>
              Comments
            </strong>
            <Styled(div)>
              test
            </Styled(div)>
          </Styled(div)>,
          <Styled(div)>
            <strong>
              Recurring
            </strong>
            <Styled(div)>
              Daily
              , 
              5
               occurrences
            </Styled(div)>
            <Styled(div)>
              Ends 
              Sunday, March 24th 2019
            </Styled(div)>
          </Styled(div)>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <strong>
                Appointment type
              </strong>,
              <Styled(div)>
                ACT
              </Styled(div)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Appointment type",
              },
              "ref": null,
              "rendered": "Appointment type",
              "type": "strong",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "ACT",
              },
              "ref": null,
              "rendered": "ACT",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <strong>
                Appointment location
              </strong>,
              <Styled(div)>
                GYM
              </Styled(div)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Appointment location",
              },
              "ref": null,
              "rendered": "Appointment location",
              "type": "strong",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "GYM",
              },
              "ref": null,
              "rendered": "GYM",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <strong>
                Date and time 
              </strong>,
              <Styled(div)>
                <div>
                  Wednesday
                </div>
                20/03/2019 - 21:00
                 
                
              </Styled(div)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Date and time ",
              },
              "ref": null,
              "rendered": "Date and time ",
              "type": "strong",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <div>
                    Wednesday
                  </div>,
                  "20/03/2019 - 21:00",
                  " ",
                  "",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Wednesday",
                  },
                  "ref": null,
                  "rendered": "Wednesday",
                  "type": "div",
                },
                "20/03/2019 - 21:00",
                " ",
                "",
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <strong>
                Comments
              </strong>,
              <Styled(div)>
                test
              </Styled(div)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Comments",
              },
              "ref": null,
              "rendered": "Comments",
              "type": "strong",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "test",
              },
              "ref": null,
              "rendered": "test",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <strong>
                Recurring
              </strong>,
              <Styled(div)>
                Daily
                , 
                5
                 occurrences
              </Styled(div)>,
              <Styled(div)>
                Ends 
                Sunday, March 24th 2019
              </Styled(div)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Recurring",
              },
              "ref": null,
              "rendered": "Recurring",
              "type": "strong",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "Daily",
                  ", ",
                  "5",
                  " occurrences",
                ],
              },
              "ref": null,
              "rendered": Array [
                "Daily",
                ", ",
                "5",
                " occurrences",
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "Ends ",
                  "Sunday, March 24th 2019",
                ],
              },
              "ref": null,
              "rendered": Array [
                "Ends ",
                "Sunday, March 24th 2019",
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
